0.81 2022-02-20
- stop passing null ndarray in test as invalid in PDL 2.073

0.80 2021-11-01
- zap spurious long-double-related test differences

0.79 2021-10-24
- use Alien::PLplot probe for build configuration
- add functions to get list of available devices
- opt in to PDL 2.058 multi-C

0.78 2021-09-20
- doc improvement for dates in XBOX - thanks @mvgrimes
- relax required PLplot version to 5.13.0+ - thanks @zmughal

0.77 2021-07-30
- fix logic error in plslabelfunc
- build will stop unless has plplot 5.15+

0.76 2021-07-29
- add pl_cmd and pl_setCairoCtx - thanks @mikef5410

0.75 2021-07-29
- updated library tests back to 5.13.0's ones
- update library tests and API support to 5.15.0

0.74 2020-07-16
- Fix placement of plschr to change CHARSIZE.  Had been a bug introduced in 0.73 which rendered CHARSIZE
  inoperative in a call to $pl->text
- Addition of plsfam call during initialization (in $pl->new).  Fix required by newer plplots.
- Updated library tests to plplot version 5.11.0.  I know this is still well downlevel, but I don't have time
  to do a full update--Sorry!  Doug Hunt

0.73 2019-12-28
- use $^X not "perl" - thanks @eserte
- get deps right - thanks @eserte

0.72 2019/12/26
- update metadata to point to GitHub repo
- build improvements: search $Config{libpth}, deal with no-dot-in-INC
- various test improvements
- replace obsolete POSIX::isprint
- add missing constants: PL_NOTSET, PL_COLORBAR_CAP_NONE
- add PL funcs needed by 5.13.0 tests: plpath, plsurf3dl
- as needed by 5.13.0 tests, make plstransform not ignore "data" param
- update test C files to PLplot 5.13.0 tests, and .pl to match

0.71 5/15/2015   Added patch from Petr Pisar to allow build with plplot 5.11.0.  Deferred call to plschr() until
                 after call to plinit().  Response to CPAN bug: https://rt.cpan.org/Public/Bug/Display.html?id=104424

0.70 6/6/2014    Merged in changes from the missing 0.65:  Added STACKED_BAR_COLORS option to bargraph.  Allows stacked bar graph.
