@@ -1,3 +1,5 @@
+- stop misusing snprintf as if is strncpy in plslabelfunc callback
+
 0.81 2022-02-20
 - stop passing null ndarray in test as invalid in PDL 2.073
 
